fixed the color of two buttons & added margin to the prompt box to create better spacing between buttons

--- a/public/assets/css/journal.css
+++ b/public/assets/css/journal.css
@@ -210,3 +210,7 @@ main {
 nav {
   margin-bottom: 2%;
 }
+
+#box {
+  margin-top: 1%;
+}
